commit 2, explicado collect y entrySet en el el profe